Make view at first

--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -51,6 +51,35 @@
             <ul id="time-list-container-createships"></ul>
         </div>
     </div>
+    <div id="daily-mission" class="contents">
+        <h5>デイリー任務状況</h5>
+        <table class="table">
+            <tr>
+                <td>敵艦隊を撃破せよ！</td>
+                <td>[遂行中]</td>
+            </tr>
+            <tr>
+                <td>敵艦隊主力を撃滅せよ！</td>
+                <td>[ ]</td>
+            </tr>
+            <tr>
+                <td>敵艦隊を10回邀撃せよ！</td>
+                <td>[ ]</td>
+            </tr>
+            <tr>
+                <td>敵補給艦を3隻撃沈せよ！</td>
+                <td>[ ]</td>
+            </tr>
+            <tr>
+                <td>南西諸島海域の制海権を握れ！</td>
+                <td>[ ]</td>
+            </tr>
+            <tr>
+                <td>敵潜水艦を制圧せよ！</td>
+                <td>[ ]</td>
+            </tr>
+        </table>
+    </div>
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/Util.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
