--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -56,6 +56,11 @@
         <table id="quests" class="table">
         </table>
     </div>
+    <div class="contents">
+        <h5>レシピメモ</h5>
+        <div id="recipe-memo-container">
+        </div>
+    </div>
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/Util.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
