--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -73,6 +73,7 @@
     <script type="text/javascript" src="../js/definitions/models/events/missions/Missions.js"></script>
     <script type="text/javascript" src="../js/definitions/models/events/missions/Mission.js"></script>
     <script type="text/javascript" src="../js/definitions/models/quests/Quests.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/memo/Memo.js"></script>
     <script type="text/javascript" src="../js/pages/dashboard.js"></script>
 </body>
 </html>
