Add explanation for β-version

--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -52,7 +52,11 @@
         </div>
     </div>
     <div class="contents">
-        <h5>デイリー任務消化状況</h5>
+        <h6 style="color:#333;margin-top:50px;margin-bottom:0;">以下の機能は開発中です。ご意見ご要望お待ちしております</h6>
+        <h6 style="color:#333;margin-top:0;margin-bottom:0;">「もっとこうしたほうがいい」とか</h6>
+    </div>
+    <div class="contents">
+        <h5 style="margin-top:20px">デイリー任務消化状況</h5>
         <table id="quests" class="table">
         </table>
     </div>
