Create Base View Class and MemoView

--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -74,6 +74,8 @@
     <script type="text/javascript" src="../js/definitions/models/events/missions/Mission.js"></script>
     <script type="text/javascript" src="../js/definitions/models/quests/Quests.js"></script>
     <script type="text/javascript" src="../js/definitions/models/memo/Memo.js"></script>
+    <script type="text/javascript" src="../js/pages/view/View.js"></script>
+    <script type="text/javascript" src="../js/pages/view/dashboard/MemoView.js"></script>
     <script type="text/javascript" src="../js/pages/dashboard.js"></script>
 </body>
 </html>
