Refactor by using View Class

--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -53,8 +53,8 @@
     </div>
     <div class="contents">
         <h5 style="margin-top:20px">デイリー任務消化状況</h5>
-        <table id="quests" class="table">
-        </table>
+        <div id="quest-list-container">
+        </div>
     </div>
     <div class="contents">
         <h5>レシピメモ</h5>
@@ -75,6 +75,8 @@
     <script type="text/javascript" src="../js/definitions/models/quests/Quests.js"></script>
     <script type="text/javascript" src="../js/definitions/models/memo/Memo.js"></script>
     <script type="text/javascript" src="../js/pages/view/View.js"></script>
+    <script type="text/javascript" src="../js/pages/view/dashboard/QuestView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/dashboard/QuestListView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/MemoView.js"></script>
     <script type="text/javascript" src="../js/pages/dashboard.js"></script>
 </body>
