Add config interface

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -226,16 +226,14 @@
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="2"><h4>[その他、開発中のもの]<span class="xsmall">ご意見お待ちしております</span></h4></td>
+                    <td colspan="2"><h4>[その他・報告系]</h4></td>
                 </tr>
-
-                <tr class="yet">
-                    <td>建造レシピメモ</td>
-                    <td><input type="text" size="50" placeholder="400/10/600/10 とか" disabled></td>
-                </tr>
-                <tr class="yet">
-                    <td>開発レシピメモ</td>
-                    <td><input type="text" size="50" placeholder="20/60/10/110 とか" disabled> </td>
+                <tr>
+                    <td>開発(建造はまだ)報告窓出す</td>
+                    <td>
+                        <input id="share-kousyo-result" type="checkbox">
+                        <span class="xsmall">自動ではツイートされません</span>
+                    </td>
                 </tr>
 
                 <tr>
