--- a/src/html/more.html
+++ b/src/html/more.html
@@ -229,7 +229,7 @@
                     <td colspan="2"><h4>[その他・報告系]</h4></td>
                 </tr>
                 <tr>
-                    <td>開発(建造はまだ)報告窓出す</td>
+                    <td>開発・建造報告窓出す</td>
                     <td>
                         <input id="share-kousyo-result" type="checkbox">
                         <span class="xsmall">自動ではツイートされません</span>
