Add interface to controll mission-reminder

--- a/src/html/more.html
+++ b/src/html/more.html
@@ -40,6 +40,14 @@
                 </tr>
                 <tr>
                     <td>
+                        遠征リマインダー登録を有効にする
+                    </td>
+                    <td>
+                        <input id="enable-mission-reminder" type="checkbox">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         入渠・建造時リマインダー登録機能を有効にする<br>
                         <p class="xsmall">
                             画像キャプチャの時間表時部分をサーバに送って画像解析してます。画面解像度が低い/ウィジェットが小さいなどの環境では失敗することが多いです。
