--- a/src/html/more.html
+++ b/src/html/more.html
@@ -83,7 +83,7 @@
                     <td>
                         スクショボタン表示
                         <span class="xsmall">
-                            （Ctrl + Shift + 0）
+                            （ショートカットキー : Ctrl + Shift + 0）
                         </span>
                     </td>
                     <td>
