Show Nyukyo Count

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -66,13 +66,14 @@
                 <table border="0">
                 <tbody>
                     <tr><td></td><td>本日</td><td>今週</td></tr>
-                    <tr><td>補給</td><td id="daily-hokyu_count">1</td><td id="weekly-hokyu_count">3</td></tr>
-                    <tr><td>遠征</td><td id="daily-mission_count">1</td><td id="weekly-mission_count">3</td></tr>
-                    <tr><td>出撃</td><td id="daily-map_count">1</td><td id="weekly-map_count">3</td></tr>
-                    <tr><td>開発</td><td id="daily-createitem_count">1</td><td id="weekly-createitem_count">3</td></tr>
-                    <tr><td>建造</td><td id="daily-createship_count">1</td><td id="weekly-createship_count">3</td></tr>
-                    <tr><td>演習</td><td id="daily-practice_count">1</td><td id="weekly-practice_count">3</td></tr>
-                    <tr><td>近改</td><td id="daily-kaisou_count">1</td><td id="weekly-kaisou_count">3</td></tr>
+                    <tr><td>補給</td><td id="daily-hokyu_count">Error</td><td id="weekly-hokyu_count">Error</td></tr>
+                    <tr><td>遠征</td><td id="daily-mission_count">Error</td><td id="weekly-mission_count">Error</td></tr>
+                    <tr><td>出撃</td><td id="daily-map_count">Error</td><td id="weekly-map_count">Error</td></tr>
+                    <tr><td>開発</td><td id="daily-createitem_count">Error</td><td id="weekly-createitem_count">Error</td></tr>
+                    <tr><td>建造</td><td id="daily-createship_count">Error</td><td id="weekly-createship_count">Error</td></tr>
+                    <tr><td>演習</td><td id="daily-practice_count">Error</td><td id="weekly-practice_count">Error</td></tr>
+                    <tr><td>入渠</td><td id="daily-nyukyo_count">Error</td><td id="weekly-nyukyo_count">Error</td></tr>
+                    <tr><td>近改</td><td id="daily-kaisou_count">Error</td><td id="weekly-kaisou_count">Error</td></tr>
                     <tr>
                         <td></td>
                         <td>
