Rename page files

--- a/src/html/announce.html
+++ b/src/html/announce.html
@@ -11,7 +11,7 @@
         <ul>
             <li>設定
                 <ul>
-                    <li><a href="src/html/more.html">リッチな設定へ</a></li>
+                    <li><a href="src/html/settings.html">リッチな設定へ</a></li>
                 </ul>
             </li>
             <li>これについて
@@ -45,6 +45,6 @@
             </li>
         </ul>
         <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
-        <script type="text/javascript" src="../js/pages/config.js"></script>
+        <script type="text/javascript" src="../js/pages/announce.js"></script>
     </body>
 </html>
