--- a/src/html/select.html
+++ b/src/html/select.html
@@ -88,7 +88,7 @@
             </div>
         </div>
         <button id="show-clockmode-button">clock mode</button><br>
-        <a href="/src/html/config.html"><small>これの設定など</small></a>
+        <a href="/src/html/announce.html"><small>これの設定など</small></a>
     </div>
     <script type="text/javascript" src="../js/Constants.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
