--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -301,6 +301,6 @@
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     <script type="text/javascript" src="../js/definitions/models/FileSystem.js"></script>
     <script type="text/javascript" src="../js/Util.js"></script>
-    <script type="text/javascript" src="../js/pages/more.js"></script>
+    <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
 </html>
