Use View Class in settings

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -70,7 +70,7 @@
                 </td>
             </tr>
         </table>
-        <table class="settings">
+        <table id="icon-tools" class="settings">
             <tr>
                 <td colspan="2"><h4>[アイコンツール関係]</h4></td>
             </tr>
@@ -307,6 +307,9 @@
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     <script type="text/javascript" src="../js/definitions/models/FileSystem.js"></script>
     <script type="text/javascript" src="../js/Util.js"></script>
+    <script type="text/javascript" src="../js/pages/view/View.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/SettingRadioButtonView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/ImageFormatView.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
 </html>
