Use SettingCheckboxView on AllowOcrResultLog

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -47,14 +47,6 @@
                     <input id="enable-mission-reminder" type="checkbox">
                 </td>
             </tr>
-            <tr>
-                <td>自動取得失敗レポートを送信する</td>
-                <td>
-                    <input id="allow-ocr-result-log" type="checkbox">
-                    <span class="xsmall">精度向上にご協力くだしあ！時間部分の画像断片と解析失敗結果を自前のログサーバに送信します</span><br>
-                    <span class="xsmall">送信された失敗ログは<a href="http://log-kcwidget.oti10.com/ocr">ここ</a>で見ることができます</span>
-                </td>
-            </tr>
         </table>
         <table id="icon-tools" class="settings">
             <tr>
@@ -294,7 +286,9 @@
     <script type="text/javascript" src="../js/definitions/models/FileSystem.js"></script>
     <script type="text/javascript" src="../js/Util.js"></script>
     <script type="text/javascript" src="../js/pages/view/View.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/SettingCheckboxView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SettingRadioButtonView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/AllowOcrResultLogView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/ImageFormatView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/DynamicReminderTypeView.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
