Use SettingCheckboxView on EnableMissionReminder

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -39,14 +39,6 @@
                     </select>
                 </td>
             </tr>
-            <tr>
-                <td>
-                    遠征リマインダー登録を有効にする
-                </td>
-                <td>
-                    <input id="enable-mission-reminder" type="checkbox">
-                </td>
-            </tr>
         </table>
         <table id="icon-tools" class="settings">
             <tr>
@@ -291,6 +283,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/AllowOcrResultLogView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/ImageFormatView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/DynamicReminderTypeView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/EnableMissionReminderView.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
 </html>
