Improve settings and delete announce.html

--- a/src/html/select.html
+++ b/src/html/select.html
@@ -88,8 +88,9 @@
             </div>
         </div>
         <button id="show-clockmode-button">clock mode</button><br>
-        <a href="/src/html/announce.html"><small>これの設定など</small></a>
+        <a class="link clickable" data-href="/src/html/settings.html"><small>これの設定など</small></a>
     </div>
+    <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/Constants.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     <script type="text/javascript" src="../js/definitions/models/achievements/Achievements.js"></script>
