--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -213,7 +213,7 @@
                 <td colspan="2"><h4>[その他・報告系]</h4></td>
             </tr>
             <tr>
-                <td>開発・建造報告窓出す</td>
+                <td>開発・建造報告窓出す<br><span class="xsmall">こんな感じ <a href="https://twitter.com/search?q=%E9%82%A3%E7%8F%82%20%23kancolle_ship&src=typd&f=realtime">那珂ﾁｬﾝ</a></span></td>
                 <td>
                     <input id="share-kousyo-result" type="checkbox">
                     <span class="xsmall">自動ではツイートされません</span>
@@ -229,12 +229,17 @@
                 <td class="sorry">
                     <ul>
                         <li>× アイテム課金とかする</li>
+                        <li>× Chrome派生ブラウザのサポート</li>
                     </ul>
                 </td>
             </tr>
             <tr>
                 <td>リリースバージョンの詳細</td>
-                <td><a href="https://github.com/otiai10/kanColleWidget/issues/milestones">https://github.com/otiai10/kanColleWidget/issues/milestones</a></td>
+                <td><a href="https://github.com/otiai10/kanColleWidget/releases">github.com/otiai10/kanColleWidget/releases</a></td>
+            </tr>
+            <tr>
+                <td>現在頂いている改善、バグ報告</td>
+                <td><a href="https://github.com/otiai10/kanColleWidget/issues?labels=question&page=1&state=open">github.com/otiai10/kanColleWidget/issues</a>
             </tr>
             <tr>
                 <td>機能改善・バグ報告はここ</td>
@@ -242,15 +247,26 @@
                     <a href="https://github.com/otiai10/kanColleWidget/issues/new">GitHub</a>
                     か
                     <a href="https://twitter.com/otiai10">Twitter</a>
+                    もしくは
+                    <a href="mailto:otiai10@gmail.com">Gmail</a>
                     まで
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="https://twitter.com/KanColle_STAFF/statuses/373961855586140161">公式から</a>
+                    参考リンクとか
                 </td>
                 <td>
-                    参考：<a href="http://www.slideshare.net/otiai10/ss-26631311">艦これウィジェットの機能説明</a>
+                    <ul>
+                        <li>公式:<a href="http://www.dmm.com/netgame/social/-/gadgets/=/app_id=854854/">艦隊これくしょん</a></li>
+                        <li><a href="https://twitter.com/KanColle_STAFF/statuses/373961855586140161">公式から</a></li>
+                        <li><a href="http://otiai10.github.io/kanColleWidget/">艦これウィジェット プロジェクトページ</a></li>
+                        <li><a href="http://www.slideshare.net/otiai10/ss-26631311">加賀さんと僕(サービス概要編)</a></li>
+                        <li><a href="http://www.slideshare.net/otiai10/ss-26908975">加賀さんと僕(実装編)</a></li>
+                        <li>「航海日誌」と合わせると良いらしい...知らんけど
+                          <ul><li><a href="https://twitter.com/RGR4Y/status/388514575202537472">“艦これウィジェットと組み合わせると強い。...”</a></li></ul>
+                        </li>
+                    </ul>
                 </td>
             </tr>
             <tr>
@@ -265,7 +281,7 @@
             </tr>
             <tr>
                 <td></td>
-                <td style="text-align: right">and <a href="https://twitter.com/search?q=%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88&src=typd&mode=realtime">you</a></td>
+                <td style="text-align: right">and <a href="https://twitter.com/search?q=%E8%89%A6%E3%81%93%E3%82%8C%E3%82%A6%E3%82%A3%E3%82%B8%E3%82%A7%E3%83%83%E3%83%88&src=typd&mode=realtime">you.</a></td>
             </tr>
         </table>
         <h4><span id="close-config" class="clickable">[とじる]</span></h4>
