--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../css/settings.css">
 </head>
 <body>
+    <div id="announce" class="modal">
+    </div>
     <h3>艦これウィジェットのリッチな設定とか</h3>
     <div class="main">
         <table class="settings">
@@ -294,6 +296,7 @@
     <script type="text/javascript" src="../js/definitions/models/FileSystem.js"></script>
     <script type="text/javascript" src="../js/Util.js"></script>
     <script type="text/javascript" src="../js/pages/view/View.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/AnnounceView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SettingCheckboxView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SettingRadioButtonView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/AllowOcrResultLogView.js"></script>
