--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/settings.css">
 </head>
 <body>
-    <div id="announce" class="modal">
+    <div id="announce" class="modal" style="display:none;">
     </div>
     <h3>艦これウィジェットのリッチな設定とか</h3>
     <div class="main">
