Add interface for setting TirednessView

--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -22,7 +22,7 @@
             <ul id="time-list-container-createships"></ul>
         </div>
     </div>
-    <div class="contents">
+    <div id="tiredness-contents" class="contents">
         <h5 style="margin-top:20px">簡易疲労度メーター</h5>
         <div id="tiredness-container"></div>
     </div>
