--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -299,10 +299,12 @@
     <script type="text/javascript" src="../js/pages/view/settings/AnnounceView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SettingCheckboxView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SettingRadioButtonView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/SettingSelectView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/AllowOcrResultLogView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/ImageFormatView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/DynamicReminderTypeView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/EnableMissionReminderView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/TirednessLength.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
 </html>
