Add interface for config prevent-forgetting-quest

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -304,6 +304,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/ImageFormatView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/DynamicReminderTypeView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/EnableMissionReminderView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/PreventForgettingQuestView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/TirednessLength.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
