Limit allowed file type for audio

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -163,7 +163,7 @@
                 <td>
                     <div class="reset" target="notification-sound-file"><img src="../img/remove.png"></div>
                     <span>デフォルト：<span id="notification-sound-file-already-set"></span><input type="submit" id="notification-test" value="テスト"/></span><br/>
-                    <input id="notification-sound-file" target="notification-sound-file" type="file" accept="audio/*"/><br/>
+                    <input id="notification-sound-file" target="notification-sound-file" type="file" accept="audio/mp3,audio/wav,audio/ogg,audio/m4a"/><br/>
 
                     <span  id="notification-sound-file-validation" class="xsmall validation-message"></span>
                 </td>
