Refactor Manual Timers

--- a/src/html/set_manual_timer.html
+++ b/src/html/set_manual_timer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../css/set_manual_timer.css">
-    <title>遠征完了通知設定画面</title>
+    <title></title>
 </head>
 <body>
     <script type="text/javascript" src="../js/AssetManager.js"></script>
@@ -14,11 +14,17 @@
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     <script type="text/javascript" src="../js/definitions/models/events/EventsBase.js"></script>
     <script type="text/javascript" src="../js/definitions/models/events/SoloEventBase.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/events/createships/Createship.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/events/createships/Createships.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/events/nyukyos/Nyukyo.js"></script>
+    <script type="text/javascript" src="../js/definitions/models/events/nyukyos/Nyukyos.js"></script>
     <script type="text/javascript" src="../js/definitions/models/events/missions/Mission.js"></script>
     <script type="text/javascript" src="../js/definitions/models/events/missions/Missions.js"></script>
     <script type="text/javascript" src="../js/pages/view/View.js"></script>
     <script type="text/javascript" src="../js/pages/view/manual/ManualTimerBase.js"></script>
+    <script type="text/javascript" src="../js/pages/view/manual/ManualTimerNyukyoView.js"></script>
     <script type="text/javascript" src="../js/pages/view/manual/ManualTimerMissionView.js"></script>
-    <script type="text/javascript" src="../js/pages/set_mission.js"></script>
+    <script type="text/javascript" src="../js/pages/view/manual/ManualTimerCreateshipView.js"></script>
+    <script type="text/javascript" src="../js/pages/set_manual_timer.js"></script>
 </body>
 </html>
