--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -175,27 +175,27 @@
                     <div id="notification-sound-extend" style="display:none;">
                         <div class="reset" target="notification-sound-mission-start-file"><img src="../img/remove.png"></div>
                         <span>遠征出発：<span id="notification-sound-mission-start-file-already-set"></span><input type="submit" id="notification-test" data-kind="mission-start" value="テスト"/></span><br/>
-                        <input id="notification-sound-mission-start-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
+                        <input id="notification-sound-mission-start-file" target="notification-sound-url" type="file" accept="audio/mp3,audio/wav,audio/ogg,audio/m4a"/><br/>
                         <hr/>
                         <div class="reset" target="notification-sound-mission-finish-file"><img src="../img/remove.png"></div>
                         <span>遠征帰投：<span id="notification-sound-mission-finish-file-already-set"></span><input type="submit" id="notification-test" data-kind="mission-finish" value="テスト"/></span><br/>
-                        <input id="notification-sound-mission-finish-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
+                        <input id="notification-sound-mission-finish-file" target="notification-sound-url" type="file" accept="audio/mp3,audio/wav,audio/ogg,audio/m4a"/><br/>
                         <hr/>
                         <div class="reset" target="notification-sound-nyukyo-start-file"><img src="../img/remove.png"></div>
                         <span>入渠開始：<span id="notification-sound-nyukyo-start-file-already-set"></span><input type="submit" id="notification-test" data-kind="nyukyo-start" value="テスト"/></span><br/>
-                        <input id="notification-sound-nyukyo-start-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
+                        <input id="notification-sound-nyukyo-start-file" target="notification-sound-url" type="file" accept="audio/mp3,audio/wav,audio/ogg,audio/m4a"/><br/>
                         <hr/>
                         <div class="reset" target="notification-sound-nyukyo-finish-file"><img src="../img/remove.png"></div>
                         <span>入渠終了：<span id="notification-sound-nyukyo-finish-file-already-set"></span><input type="submit" id="notification-test" data-kind="nyukyo-finish" value="テスト"/></span><br/>
-                        <input id="notification-sound-nyukyo-finish-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
+                        <input id="notification-sound-nyukyo-finish-file" target="notification-sound-url" type="file" accept="audio/mp3,audio/wav,audio/ogg,audio/m4a"/><br/>
                         <hr/>
                         <div class="reset" target="notification-sound-createship-start-file"><img src="../img/remove.png"></div>
                         <span>建造開始：<span id="notification-sound-createship-start-file-already-set"></span><input type="submit" id="notification-test" data-kind="createship-start" value="テスト"/></span><br/>
-                        <input id="notification-sound-createship-start-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
+                        <input id="notification-sound-createship-start-file" target="notification-sound-url" type="file" accept="audio/mp3,audio/wav,audio/ogg,audio/m4a"/><br/>
                         <hr/>
                         <div class="reset" target="notification-sound-createship-finish-file"><img src="../img/remove.png"></div>
                         <span>建造終了：<span id="notification-sound-createship-finish-file-already-set"></span><input type="submit" id="notification-test" data-kind="createship-finish" value="テスト"/></span><br/>
-                        <input id="notification-sound-createship-finish-file" target="notification-sound-url" type="file" accept="audio/*"/><br/>
+                        <input id="notification-sound-createship-finish-file" target="notification-sound-url" type="file" accept="audio/mp3,audio/wav,audio/ogg,audio/m4a"/><br/>
                         <hr/>
                         <span class="xsmall">1回選択してキャンセルするとデフォルトに戻せます</span><br>
                         <a id="close-notification-sound-extend">とじる</a>
