--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -230,6 +230,7 @@
                 <td>現在までに報告されている「ウィジェット内でできないこと」</td>
                 <td class="sorry">
                     <ul>
+                        <li>× ランキングで他提督名を表示すること(ときどき)</li>
                         <li>× アイテム課金とかする</li>
                         <li>× Chrome派生ブラウザのサポート</li>
                     </ul>
