--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -60,6 +60,7 @@
     <script type="text/javascript" src="../js/pages/view/dashboard/MemoView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TirednessListView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TirednessView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/dashboard/ModalView.js"></script>
     <script type="text/javascript" src="../js/pages/dashboard.js"></script>
 </body>
 </html>
