Refactor & Test : OcrServer

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -53,7 +53,15 @@
     <script type="text/javascript" src="src/js/pngencoder.min.js"></script>
     <!-- script type="text/javascript" src="src/js/main.js"></script -->
   <!-- /src -->
-  <script type="text/javascript" src="tests/SampleSpec.js"></script>
+
+  <!-- fixture -->
+    <script type="text/javascript" src="fixture/fixture-image-uri.js"></script>
+  <!-- /fixture -->
+
+  <!-- test -->
+    <script type="text/javascript" src="js/SampleSpec.js"></script>
+    <script type="text/javascript" src="js/definitions/models/server/OcrServerSpec.js"></script>
+  <!-- /test -->
   <script type="text/javascript" src="./SpecRunner.js"></script>
 
 </head>
