Add test of `Missions` (extends EventsBase)

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -4,6 +4,8 @@
 <head>
   <title>Jasmine Spec Runner</title>
 
+  <meta charset="utf-8">
+
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.3.0/jasmine_favicon.png">
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.0/jasmine.css">
   <script type="text/javascript" src="lib/jasmine-1.3.0/jasmine.js"></script>
@@ -61,6 +63,7 @@
   <!-- test -->
     <script type="text/javascript" src="js/SampleSpec.js"></script>
     <script type="text/javascript" src="js/definitions/models/server/OcrServerSpec.js"></script>
+    <script type="text/javascript" src="js/definitions/models/events/missions/MissionsSpec.js"></script>
   <!-- /test -->
   <script type="text/javascript" src="./SpecRunner.js"></script>
 
