--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -64,6 +64,8 @@
     <script type="text/javascript" src="js/SampleSpec.js"></script>
     <script type="text/javascript" src="js/definitions/models/server/OcrServerSpec.js"></script>
     <script type="text/javascript" src="js/definitions/models/events/missions/MissionsSpec.js"></script>
+    <script type="text/javascript" src="js/definitions/models/events/nyukyos/NyukyosSpec.js"></script>
+    <script type="text/javascript" src="js/definitions/actions/NyukyoSpec.js"></script>
   <!-- /test -->
   <script type="text/javascript" src="./SpecRunner.js"></script>
 
