--- a/src/html/select.html
+++ b/src/html/select.html
@@ -92,6 +92,7 @@
     </div>
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/Constants.js"></script>
+    <script type="text/javascript" src="../js/definitions/share/TwitterCrawler.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     <script type="text/javascript" src="../js/definitions/models/achievements/Achievements.js"></script>
     <script type="text/javascript" src="../js/Util.js"></script>
