--- a/src/html/select.html
+++ b/src/html/select.html
@@ -96,6 +96,8 @@
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
     <script type="text/javascript" src="../js/definitions/models/achievements/Achievements.js"></script>
     <script type="text/javascript" src="../js/Util.js"></script>
+    <script type="text/javascript" src="../js/pages/view/View.js"></script>
+    <script type="text/javascript" src="../js/pages/view/select/StaffTwitterView.js"></script>
     <script type="text/javascript" src="../js/pages/select.js"></script>
 </body>
 </html>
