--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -307,6 +307,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/EnableMissionReminderView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/PreventForgettingQuestView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/TirednessLength.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/DisplayMaintenanceInfoView.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
 </html>
