--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -65,6 +65,7 @@
     <script type="text/javascript" src="js/definitions/models/server/OcrServerSpec.js"></script>
     <script type="text/javascript" src="js/definitions/models/events/missions/MissionsSpec.js"></script>
     <script type="text/javascript" src="js/definitions/models/events/nyukyos/NyukyosSpec.js"></script>
+    <script type="text/javascript" src="js/definitions/models/events/createships/CreateshipsSpec.js"></script>
     <script type="text/javascript" src="js/definitions/actions/NyukyoSpec.js"></script>
   <!-- /test -->
   <script type="text/javascript" src="./SpecRunner.js"></script>
