Add test for Action

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -67,6 +67,8 @@
     <script type="text/javascript" src="js/definitions/models/events/nyukyos/NyukyosSpec.js"></script>
     <script type="text/javascript" src="js/definitions/models/events/createships/CreateshipsSpec.js"></script>
     <script type="text/javascript" src="js/definitions/actions/NyukyoSpec.js"></script>
+    <script type="text/javascript" src="js/definitions/actions/MissionSpec.js"></script>
+    <script type="text/javascript" src="js/definitions/actions/KousyouSpec.js"></script>
   <!-- /test -->
   <script type="text/javascript" src="./SpecRunner.js"></script>
 
