Make Quests into module

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -66,6 +66,7 @@
     <script type="text/javascript" src="js/definitions/models/events/missions/MissionsSpec.js"></script>
     <script type="text/javascript" src="js/definitions/models/events/nyukyos/NyukyosSpec.js"></script>
     <script type="text/javascript" src="js/definitions/models/events/createships/CreateshipsSpec.js"></script>
+    <script type="text/javascript" src="js/definitions/models/quests/QuestsSpec.js"></script>
     <script type="text/javascript" src="js/definitions/actions/NyukyoSpec.js"></script>
     <script type="text/javascript" src="js/definitions/actions/MissionSpec.js"></script>
     <script type="text/javascript" src="js/definitions/actions/KousyouSpec.js"></script>
