--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -70,6 +70,7 @@
     <script type="text/javascript" src="js/definitions/actions/NyukyoSpec.js"></script>
     <script type="text/javascript" src="js/definitions/actions/MissionSpec.js"></script>
     <script type="text/javascript" src="js/definitions/actions/KousyouSpec.js"></script>
+    <script type="text/javascript" src="js/definitions/models/prechecker/PreCheckerSpec.js"></script>
   <!-- /test -->
   <script type="text/javascript" src="./SpecRunner.js"></script>
 
