Make Memo into module

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -54,6 +54,8 @@
     <script type="text/javascript" src="src/js/definitions/share/Share.js"></script>
     <script type="text/javascript" src="src/js/pngencoder.min.js"></script>
     <!-- script type="text/javascript" src="src/js/main.js"></script -->
+
+    <script type="text/javascript" src="src/js/definitions/models/memo/Memo.js"></script>
   <!-- /src -->
 
   <!-- fixture -->
@@ -67,6 +69,7 @@
     <script type="text/javascript" src="js/definitions/models/events/nyukyos/NyukyosSpec.js"></script>
     <script type="text/javascript" src="js/definitions/models/events/createships/CreateshipsSpec.js"></script>
     <script type="text/javascript" src="js/definitions/models/quests/QuestsSpec.js"></script>
+    <script type="text/javascript" src="js/definitions/models/memo/MemoSpec.js"></script>
     <script type="text/javascript" src="js/definitions/actions/NyukyoSpec.js"></script>
     <script type="text/javascript" src="js/definitions/actions/MissionSpec.js"></script>
     <script type="text/javascript" src="js/definitions/actions/KousyouSpec.js"></script>
