--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -6,36 +6,48 @@
     <title>「お仕事お疲れさまです」</title>
 </head>
 <body>
-    <div id="main-clock" class="contents boxy">
-    </div>
-    <div id="time-left" class="contents boxy">
-        <div id="time-list-wrapper-missions" class="time-list">
-            <p class="list-title">- 遠征帰投予定時刻</p>
-            <ul id="time-list-container"></ul>
+    <div id="wrapper">
+        <div id="main">
+            <div id="page0">
+                <div id="main-clock" class="contents boxy">
+                </div>
+                <div id="time-left" class="contents boxy">
+                    <div id="time-list-wrapper-missions" class="time-list">
+                        <p class="list-title">- 遠征帰投予定時刻</p>
+                        <ul id="time-list-container"></ul>
+                    </div>
+                    <div id="time-list-wrapper-nyukyos" class="time-list">
+                        <p class="list-title">- 入渠完了予定時刻</p>
+                        <ul id="time-list-container-nyukyos"></ul>
+                    </div>
+                    <div id="time-list-wrapper-createships" class="time-list">
+                        <p class="list-title">- 建造完了予定時刻</p>
+                        <ul id="time-list-container-createships"></ul>
+                    </div>
+                </div>
+            </div><!-- /#page0 -->
+            <div id="page1">
+                <div id="tiredness-contents" class="contents">
+                    <h5 style="margin-top:20px">簡易疲労度メーター</h5>
+                    <div id="tiredness-container"></div>
+                </div>
+                <div class="contents">
+                    <h5>デイリー任務消化状況 (<span id="progress" class="xsmall"></span>)</h5>
+                    <div id="quest-list-container">
+                    </div>
+                </div>
+            </div><!-- /#page1 -->
+            <div id="page2">
+                <div class="contents">
+                    <h5>レシピメモ</h5>
+                    <div id="recipe-memo-container">
+                    </div>
+                </div>
+            </div><!-- /#page2 -->
+        </div><!-- /#main -->
+        <div id="side-navi">
         </div>
-        <div id="time-list-wrapper-nyukyos" class="time-list">
-            <p class="list-title">- 入渠完了予定時刻</p>
-            <ul id="time-list-container-nyukyos"></ul>
-        </div>
-        <div id="time-list-wrapper-createships" class="time-list">
-            <p class="list-title">- 建造完了予定時刻</p>
-            <ul id="time-list-container-createships"></ul>
-        </div>
-    </div>
-    <div id="tiredness-contents" class="contents">
-        <h5 style="margin-top:20px">簡易疲労度メーター</h5>
-        <div id="tiredness-container"></div>
-    </div>
-    <div class="contents">
-        <h5>デイリー任務消化状況 (<span id="progress" class="xsmall"></span>)</h5>
-        <div id="quest-list-container">
-        </div>
-    </div>
-    <div class="contents">
-        <h5>レシピメモ</h5>
-        <div id="recipe-memo-container">
-        </div>
-    </div>
+    </div><!-- /#wrapper -->
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/Util.js"></script>
     <script type="text/javascript" src="../js/definitions/models/MyStorage.js"></script>
