--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -8,7 +8,7 @@
 <body>
     <div id="wrapper">
         <div id="main">
-            <div id="page0">
+            <div id="page0" class="page">
                 <div id="main-clock" class="contents boxy">
                 </div>
                 <div id="time-left" class="contents boxy">
@@ -25,19 +25,19 @@
                         <ul id="time-list-container-createships"></ul>
                     </div>
                 </div>
-            </div><!-- /#page0 -->
-            <div id="page1">
                 <div id="tiredness-contents" class="contents">
-                    <h5 style="margin-top:20px">簡易疲労度メーター</h5>
+                    <h5 id="tiredness-title" style="margin-top:20px">簡易疲労度メーター</h5>
                     <div id="tiredness-container"></div>
                 </div>
+            </div><!-- /#page0 -->
+            <div id="page1" class="page">
                 <div class="contents">
                     <h5>デイリー任務消化状況 (<span id="progress" class="xsmall"></span>)</h5>
                     <div id="quest-list-container">
                     </div>
                 </div>
             </div><!-- /#page1 -->
-            <div id="page2">
+            <div id="page2" class="page">
                 <div class="contents">
                     <h5>レシピメモ</h5>
                     <div id="recipe-memo-container">
@@ -45,8 +45,6 @@
                 </div>
             </div><!-- /#page2 -->
         </div><!-- /#main -->
-        <div id="side-navi">
-        </div>
     </div><!-- /#wrapper -->
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/Util.js"></script>
@@ -73,6 +71,7 @@
     <script type="text/javascript" src="../js/pages/view/dashboard/TirednessListView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TirednessView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/ModalView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/dashboard/SideNaviView.js"></script>
     <script type="text/javascript" src="../js/pages/dashboard.js"></script>
 </body>
 </html>
