Add interface to change Clockmode Style

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -210,9 +210,9 @@
                 </td>
             </tr>
         </table>
-        <table class="settings">
+        <table id="others" class="settings">
             <tr>
-                <td colspan="2"><h4>[その他・報告系]</h4></td>
+                <td colspan="2"><h4>[報告系・その他]</h4></td>
             </tr>
             <tr>
                 <td>開発・建造報告窓出す<br><span class="xsmall">こんな感じ <a href="https://twitter.com/search?q=%E9%82%A3%E7%8F%82%20%23kancolle_ship&src=typd&f=realtime">那珂ﾁｬﾝ</a></span></td>
@@ -308,6 +308,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/PreventForgettingQuestView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/TirednessLength.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/DisplayMaintenanceInfoView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/ClockmodeStyleView.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
 </html>
