--- a/src/html/select.html
+++ b/src/html/select.html
@@ -88,7 +88,7 @@
             </div>
         </div>
         <button id="show-clockmode-button">clock mode</button><br>
-        <a class="link clickable" data-href="/src/html/settings.html"><small>これの設定など</small></a>
+        <a class="link clickable" data-href="/src/html/settings.html"><small>これの設定など</small><small id="new-arrival"></small></a>
     </div>
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/Constants.js"></script>
@@ -98,6 +98,7 @@
     <script type="text/javascript" src="../js/Util.js"></script>
     <script type="text/javascript" src="../js/pages/view/View.js"></script>
     <script type="text/javascript" src="../js/pages/view/select/StaffTwitterView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/AnnounceView.js"></script>
     <script type="text/javascript" src="../js/pages/select.js"></script>
 </body>
 </html>
