Add Modal for File Select

--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -110,7 +110,7 @@
                 </td>
             </tr>
         </table>
-        <table class="settings">
+        <table id="notification-settings" class="settings">
             <tr>
                 <td colspan="2"><h4>[通知関係]</h4></td>
             </tr>
@@ -297,6 +297,7 @@
     <script type="text/javascript" src="../js/definitions/models/FileSystem.js"></script>
     <script type="text/javascript" src="../js/Util.js"></script>
     <script type="text/javascript" src="../js/pages/view/View.js"></script>
+    <script type="text/javascript" src="../js/pages/view/ModalView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/AnnounceView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SettingCheckboxView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/SettingRadioButtonView.js"></script>
@@ -309,6 +310,7 @@
     <script type="text/javascript" src="../js/pages/view/settings/TirednessLength.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/DisplayMaintenanceInfoView.js"></script>
     <script type="text/javascript" src="../js/pages/view/settings/ClockmodeStyleView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/settings/FileSelectView.js"></script>
     <script type="text/javascript" src="../js/pages/settings.js"></script>
 </body>
 </html>
