--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -64,6 +64,7 @@
 
   <!-- test -->
     <script type="text/javascript" src="js/SampleSpec.js"></script>
+    <script type="text/javascript" src="js/UtilSpec.js"></script>
     <script type="text/javascript" src="js/definitions/models/server/OcrServerSpec.js"></script>
     <script type="text/javascript" src="js/definitions/models/events/missions/MissionsSpec.js"></script>
     <script type="text/javascript" src="js/definitions/models/events/nyukyos/NyukyosSpec.js"></script>
