--- a/src/html/loader.html
+++ b/src/html/loader.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <style>
         html, body {
+            font-family: "Meiryo";
+            font-weight: bold;
             margin: 0;
             padding: 0;
             clear: both;
