--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -73,6 +73,9 @@
     <script type="text/javascript" src="../js/pages/view/ModalView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/DashboardModalView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/SideNaviView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/dashboard/TimerView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/dashboard/TimersView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/dashboard/TimersMissionView.js"></script>
     <script type="text/javascript" src="../js/pages/dashboard.js"></script>
 </body>
 </html>
