--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -77,6 +77,7 @@
     <script type="text/javascript" src="../js/pages/view/dashboard/TimersView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TimersMissionView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TimersNyukyoView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/dashboard/TimersCreateshipView.js"></script>
     <script type="text/javascript" src="../js/pages/dashboard.js"></script>
 </body>
 </html>
