Refactoring new feature view class

--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -75,6 +75,7 @@
     <script type="text/javascript" src="../js/pages/view/dashboard/SideNaviView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TimerView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TimersView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/dashboard/TimersBaseView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TimersMissionView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TimersNyukyoView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TimersCreateshipView.js"></script>
