--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -8,15 +8,8 @@
 <body>
     <div id="wrapper">
         <div id="main">
-            <div id="page0" class="page">
-            </div><!-- /#page0 -->
-            <div id="page1" class="page">
-                <div class="contents">
-                    <h5>デイリー任務消化状況 (<span id="progress" class="xsmall"></span>)</h5>
-                    <div id="quest-list-container">
-                    </div>
-                </div>
-            </div><!-- /#page1 -->
+            <div id="page0" class="page"></div><!-- /#page0 -->
+            <div id="page1" class="page"></div><!-- /#page1 -->
             <div id="page2" class="page">
                 <div class="contents">
                     <h5>レシピメモ</h5>
