--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -10,13 +10,7 @@
         <div id="main">
             <div id="page0" class="page"></div><!-- /#page0 -->
             <div id="page1" class="page"></div><!-- /#page1 -->
-            <div id="page2" class="page">
-                <div class="contents">
-                    <h5>レシピメモ</h5>
-                    <div id="recipe-memo-container">
-                    </div>
-                </div>
-            </div><!-- /#page2 -->
+            <div id="page2" class="page"></div><!-- /#page2 -->
         </div><!-- /#main -->
     </div><!-- /#wrapper -->
     <script type="text/javascript" src="../js/jquery.min.js"></script>
